ci: GitHub Actions, Dependabot; codox and API docstrings
- Add ci.yml (Ubuntu, Temurin 21, lein test) and dependabot for actions
- Add :test JVM opts; ignore *.nippy; README CI badge
- lein-codox for target/docs; expand k-means docstrings and protocol docs
- CONTRIBUTING + CHANGELOG + AGENTS note codox/CI

Made-with: Cursor